[project]
name = "service"
version = "0.1.0"
authors = [
    {name = "borisliao",email = "borisliaos@gmail.com"}
]
requires-python = ">=3.13"
dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "autopep8 (>=2.3.2,<3.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"